Fix remaining padding/display issues on mobile

--- a/_includes/css/custom.css
+++ b/_includes/css/custom.css
@@ -228,20 +228,20 @@ article.blog-post {
   font-family: "PT Serif", "PT Sans", "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
-@media screen and (max-width: 831px) {
-  article.blog-post {
-    /* width: 800px; */
-  }
-}
-
 article.blog-post header {
   padding: 140px 0 30px 0;
 }
 
 article.blog-post div.content {
-  /* width: 800px; */
+  width: 800px;
   margin: 0 auto;
-  padding: 20px 0 0 0;
+  padding: 20px 0 0 10px;
+}
+
+@media screen and (max-width: 767px) {
+  article.blog-post div.content {
+    width: 100%;
+  }
 }
 
 article.blog-post #disqus_thread {
@@ -355,8 +355,9 @@ article.blog-post footer a {
 }
 
 article.blog-post footer .prev span, article.blog-post footer .next span{
-  font-size: 30px;
+  font-size: 50px;
   line-height: normal;
+  display: block;
 }
 
 article.blog-post footer .next {
